[package]
name = "blue_engine_egui"
version = "0.3.0"
edition = "2021"
description = "egui library for Blue Engine"
keywords = ["gui", "blue_engine", "egui"]
categories = ["gui", "game-development", "game-engines", "rendering"]
repository = "https://github.com/AryanpurTech/BlueEngineEGUI"
license = "Apache-2.0"

[lib]
name = "blue_engine_egui"

[dependencies]
blue_engine = { version = "0.4.13" }
egui = "0.19"
egui-winit = "0.19.0"
egui-wgpu = { version = "0.19.0", features = ["winit"] }

[[example]]
name = "hello_gui"
path = "examples/hello_gui.rs"
