[package]
name = "blue_engine_egui"
version = "0.4.1"
edition = "2021"
description = "egui library for Blue Engine"
keywords = ["gui", "blue_engine", "egui"]
categories = ["gui", "game-development", "game-engines", "rendering"]
repository = "https://github.com/AryanpurTech/BlueEngineEGUI"
license = "Apache-2.0"

[lib]
name = "blue_engine_egui"

[dependencies]
#blue_engine = { version = "0.4", default-features = false }
blue_engine = { path = "../Blue Engine", default-features = false }
egui = "0.20.1"
egui-winit = "0.20.1"
egui-wgpu = { version = "0.20.0", features = ["winit"] }
bytemuck = "*"

[[example]]
name = "hello_gui"
path = "examples/hello_gui.rs"

[[example]]
name = "custom_3d"
path = "examples/custom_3d.rs"
